k8-manifests/prod/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: nodejs-app
        image: singhkomal/nodejs-app:prod-af412e6ab963fa98182d445f12353f2d0b50fb35
        ports:
        - containerPort: 5000
